--- a/cucumber-java.conf
+++ b/cucumber-java.conf
@@ -1,5 +1,6 @@
 language = 'cucumber'
 framework = 'java'
+token = '138636649617519748435931038293533917513598067165892089797'
 
 features_output_directory = './src/test/java/com/coffeemachine/features'
 output_directory = './src/test/java/com/coffeemachine'
